# futures-fs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  read.rs  write.rs
tests/: smoke.rs
