[package]
name = "futures-fs"
version = "0.0.2"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
description = "A Futures implementation for File System operations"
repository = "https://github.com/seanmonstar/futures-fs"
documentation = "https://docs.rs/futures-fs"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.4.3"
futures = "0.1.13"
futures-cpupool = "0.1"
